  [Michele Simionato]
  * `oq engine --run job.ini --exports csv` now also exports the realizations
  * Introduced the format NRML 0.5 for source models
  * Added a check on the version in case of export errors
  * Extended `oq purge` to remove calculations from the database too
  * Fixed `--make-html-report`: the view task_info was not registered
  * Stored several strings as HDF5-variable-length strings
  * Fixed an export bug for the hazard curves in .geojson format
  * Removed the array cost_types from the datastore
  * Taxonomies with chars not in the range a-z0-9 were incorrectly rejected
  * Improved the XML parsing utilities in speed, memory, portability and
    easy of use
  * Forbidden the reuse of exposure because is was fragile and error prone
  * Fixed a bug with the `realizations` array, which in hazard calculations
    was empty in the datastore

python-oq-engine (2.0.0-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Quoted the taxonomies in the CSV exports
  * Fixed a bug in classical_damage and added a master test for it
  * Fixed the escaping of the taxonomies in the datastore
  * Fixed the names of the exported risk files
  * Fixed a segfault in the WebUI when exporting files with h5py >= 2.4
  * Added a command `oq dbserver` to start/stop the database server
  * The engine exports the hazard curves one file per IMT
  * Exported lon and lat with 5 digits after the decimal point
  * Added a command `oq info --build-reports`
  * Introduced experimental support for exporting .hdf5 files

  [Daniele Viganò]
  * Reworked substantially the engine documentation: removed obsolete pages,
    updated to engine 2.0 and added instructions for Windows and Mac OS X
  * Remove oq_create_db script, db is created by the DbServer
  * Move oq_reset_db into utils and clean old code

  [Michele Simionato]
  * Now the DbServer automatically upgrades the database if needed
  * Renamed oq-lite -> oq and added a subcommand `oq engine`